--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url("https://www.digitaldesignjournal.com/wp-content/uploads/2018/07/Programming-World-Map-Wallpaper.jpg");
+    background-image: url("../img/body-background.jpg");
     background-color: #000;
 }
 
@@ -11,7 +11,7 @@ html
 
 nav
 {
-    background-image: url("https://www.digitaldesignjournal.com/wp-content/uploads/2018/07/Hi-Tech-Wallpapers-For-Desktop-and-Laptops-Wallpaper-Technology-Wallpapers.jpg?ezimgfmt=rs:675x600/rscb12/ng:webp/ngcb12");
+    background-image: url("../img/header-background.jpg");
     background-color: #000;
     /*padding: 10px;*/
 }
