--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url("../img/body-background.jpg");
+    background-image: url("../img/body-background.png");
     background-color: #000;
 }
 
@@ -11,7 +11,7 @@ html
 
 nav
 {
-    background-image: url("../img/header-background.jpg");
+    background-image: url("../img/header-background.png");
     background-color: #000;
     /*padding: 10px;*/
 }
