--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,21 @@ body
     background-color: #000;
 }
 
+@media only screen and (max-width: 959px) 
+{
+    body:before 
+    {
+        content: "";
+        background-image: url("../img/body-background.png");
+        background-size: cover;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 html
 {
     /*background-color: #000;*/
