--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,23 @@ body
 {
     background-image: url("../img/body-background.png");
     background-color: #000;
-    z-index:0;
+    background-repeat: repeat;
+    background-position: center center;
+
+    /*-webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;*/
 }
 
-@media only screen and (max-width: 959px) 
+@media only screen and (max-width: 959px)
 {
-    body:before 
+    body
     {
-        content: "";
         background-image: url("../img/body-background.png");
+        background-color: #000;
+        background-repeat: repeat;
+        background-position: center center;
         background-size: cover;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
     }
 }
 
@@ -27,8 +29,8 @@ html
 
 nav
 {
-    background-image: url("../img/header-background.png");
     background-color: #000;
+    /*background-image: url("../img/header-background.png");*/
     /*padding: 10px;*/
 }
 
