--- a/css/style.css
+++ b/css/style.css
@@ -72,26 +72,45 @@ section
     opacity: 0.9;
 }
 
-#projects
+/*#projects
 {
     border: 0px solid black;
     margin-bottom: 15px;
-}
+}*/
 
 #projects img
 {
     width: 100%;
+    height: 200px;
     min-height: 150px;
-    max-height: 250px;
+    max-height: 400px;
 
     border: 1px solid black;
-    margin: 0px;
+    margin-bottom: 15px;
     padding: 5px;
+    
 }
 
 #projects img:hover
 {
     opacity: 0.7;
+}
+
+#project img
+{
+    width: 100%;
+    height: 300px;
+    min-height: 150px;
+    max-height: 400px;
+
+    border: 1px solid black;
+    margin-bottom: 15px;
+    padding: 5px;
+}
+
+#project img:hover
+{
+    opacity: 0.9
 }
 
 #skills
