--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ section
 
 #project img
 {
+    
     width: 100%;
     height: 300px;
     min-height: 150px;
@@ -105,12 +106,21 @@ section
 
     border: 1px solid black;
     margin-bottom: 15px;
-    padding: 5px;
+    padding: 5px;  
 }
 
 #project img:hover
 {
-    opacity: 0.9
+    background-color: black;
+}
+
+.zoom
+{
+    /*-webkit-transform: scale(2.0);*/
+    transform: scale(2.0);
+    transition: transform .5s;
+    left: 50%;
+    opacity: 1;
 }
 
 #skills
